--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sitemap": "^5.11.1",
     "gatsby-plugin-styled-components": "^5.11.0",
     "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-source-strapi": "^1.0.3",
     "gatsby-transformer-sharp": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
